// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SchemaField renders array field 1`] = `
<Memo(Connect(ArrayField))
  config={Object {}}
  formName="default"
  path="text"
  schema={
    Object {
      "type": "array",
    }
  }
/>
`;

exports[`SchemaField renders object field 1`] = `
<ObjectField
  config={Object {}}
  formName="default"
  path="user"
  schema={
    Object {
      "properties": Object {
        "email": Object {
          "type": "string",
        },
        "firstName": Object {
          "type": "string",
        },
        "lastName": Object {
          "type": "string",
        },
      },
      "type": "object",
    }
  }
/>
`;

exports[`SchemaField renders scalar field 1`] = `
<Memo(Connect(ScalarField))
  config={Object {}}
  formName="default"
  path="text"
  schema={
    Object {
      "type": "string",
    }
  }
/>
`;

exports[`SchemaField renders scalar field with custom widget 1`] = `
<Memo(Connect(ScalarField))
  config={
    Object {
      "widget": "text",
    }
  }
  formName="default"
  path="text"
  schema={
    Object {
      "title": "Text Input",
      "type": "string",
    }
  }
  widgets={
    Object {
      "text": [Function],
    }
  }
/>
`;
